# c.cpp-codes

./: README.md
binaryTree/: binarySearch.cpp  simple_binary_tree.c
binaryTree/search_binary_tree/: abb.c  abb.h  main.c
bubbleSort/: Makefile  bubbleSort.cpp
cmake-example/: CMakeLists.txt
filosofos/: Makefile  main.c
hash/: hash.c  hash.h  main.c
list/: doubleLinkedList.c  linkedList.c  simple_array.cpp  sorterList.c
list/full_linked_list/: linkedlist.c  linkedlist.h  main.c
list/linked_list/: linkedlist.c  linkedlist.h  main.c
map/: life_expectancy.cpp
queue/: circularBuffer.c  food_queue.cpp  linkedQueue.c  queue.c
queue/fila_atendimento/: main.c  queue.c  queue.h
queue/static_queue/: main.c  static_queue.c  static_queue.h
random/: adivinhaNumero.cpp  anagram.cpp  binaryToDecimal.cpp  cache.cpp  factorial.c  grades.c  lampadaStruct.c  magicNumbers.c  pointer.cpp  register.c  rockPaperScissors.c  secondsToHours.c  templateAbs.cpp  tictactoe.c
stack/: base_stack.c  food_stack.cpp
stack/banco_registradores/: banco_registradores.c  banco_registradores.h  main.c
stack/calc/: calculadora.c  calculadora.h  main.c
stack/string_inverter/: main.c  pilha.c  pilha.h
